@@ -39,6 +39,9 @@ Version 1.4.7 - CVS
     (#1031455).
   - Don't move messages when target mailbox matches source mailbox (#1409453).
   - Sanitized IMAP folder names in error_message() function and filters plugin.
+  - Take X-Forwarded-Host HTTP header in consideration when constructing
+    base_uri for redirects; reduces problems with transparent proxies
+    (#1488590).
 
 Version 1.4.6 - 23 February 2006
 --------------------------------
